src/objects/TechnologyFile__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>工程师职级历史</label>
        <referenceTo>promotion__c</referenceTo>
        <relationshipLabel>技术资料</relationshipLabel>
        <relationshipName>history</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>Field1__r.Field3__c</formula>
        <label>工程师</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>编写/提交日期</label>
        <type>Date</type>
    </fields>
    <label>技术资料</label>
    <nameField>
        <displayFormat>TF{000000}</displayFormat>
        <label>技术资料编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>技术资料</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>